<resources>
    <!-- Preferences Key -->
    <string name="key_alarm_go_office_time" translatable="false">key_alarm_go_office_time</string>
    <string name="key_alarm_go_home_distance" translatable="false">key_alarm_go_home_distance</string>
    <string name="key_feedback" translatable="false">key_feedback</string>
    <string name="key_version" translatable="false">key_version</string>
    <string name="key_developers" translatable="false">key_developers</string>
    <string name="default_notification_channel_id" tanslatable="false">hppk commuterBus</string>

    <string name="app_name">HPPK Commuter Bus</string>
    <string name="splash_bottom_text" translatable="false">Copyright<![CDATA[ⓒ]]> 2019 Gold Forest Team.</string>
    <string name="start">start</string>
    <string name="favorites">Favorites</string>
    <string name="go_to_office">Go to work</string>
    <string name="off_work">Off work</string>
    <string name="bus_lines">Bus Lines</string>
    <string name="map">Map</string>
    <string name="my_page">My Page</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_required_message">Location access permission is needed.</string>
    <string name="msg_not_found_bus_stops">There are no bus stops in a 500m.</string>
    <string name="msg_found_bus_stops">There are %1$d bus stops in a 500m.</string>
    <string name="current_location">Current Location</string>
    <string name="err_failed_to_get_bus_lines">Failed to get bus lines</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="hppk_bus_noti_channel_name">HPPK Commuter Bus Notification</string>
    <string name="bus_alarm">Bus Alarm</string>
    <string name="settings">Settings</string>
    <string name="alarm_time_setting">Alarm Time Setting</string>
    <string name="alarm_distance_setting">Alarm Distance Setting</string>
    <string name="alarm_time_setting_details">Alarm time settings details (unit: Minutes)</string>
    <string name="alarm_distance_setting_details">Alarm distance setting details (unit: Meter)</string>
    <string name="app_info">App Informations</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_details">Report technical issues or suggest new features</string>
    <string name="version">Version</string>
    <string name="email" translatable="false">goldforestdev@gmail.com</string>
    <string name="send_feedback_email_subject">[%1$s][%2$s] send feedback</string>
    <string name="send_feedback_email_details">Device Model: \nAndroid OS Version: \nIssue: \n</string>

    <string name="no_data">No Data</string>
    <string name="bus_alarm_go_office_time">Bus will come to "%1$s" after %2$d minutes.</string>
    <string name="bus_alarm_go_home_distance">The bus is coming soon to your destination: %1$s</string>
  
    <string name="delete_favorite_bus">Do you want to delete your favorite bus routes?</string>
    <string name="delete_alarm_bus">Do you want to delete the bus alarms?</string>

    <string name="developers">Developers</string>
    <string name="dev_hjkim">Hyeongju Teddy Kim</string>
    <string name="dev_hjkim_email" translatable="false">hyeongju.kim@hp.com</string>
    <string name="dev_yhkim">Yoonho Aarom Kim</string>
    <string name="dev_yhkim_email" translatable="false">yoonho.kim@hp.com</string>
    <string name="bus_stops">Bus Stop List</string>

    <string name="even_notice">HPPK CommuterBus</string>
</resources>
